src/snapshots/droid_tui__regression__visual_quad_modifier_switch_passthrough_snapshot@quad_none_terminal_120.snap
---
source: src/regression.rs
assertion_line: 2424
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                          DROID: modifier_switch_passthrough                                          │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Panels ──────────────────────────────────────────────────────────────┐┌ Source ──────────────────────────────────────┐
│┌ P2B8 ──────────────────────────────────────────────────────────────┐││┌ Circuits ────────┐┌ Source [raw] ───────┐┌ ┐│
││  ○ Button B1.1    ○ LED L1.1     ○ Button B1.2    ○ LED L1.2       ││││p2b8              ││# modifier_switch_pas││·││
││       OFF             OFF             OFF             OFF          ││││button            ││# Exercises direct co││·││
││  ○ Button B1.3    ○ LED L1.3     ○ Button B1.4    ○ LED L1.4       ││││copy              ││# copy chains, leaf t││·││
││  ○ Button B1.5    ○ LED L1.5     ○ Button B1.6    ○ LED L1.6       ││││clocktool         ││                     ││·││
││       OFF             OFF             OFF             OFF          ││││copy (1)          ││[p2b8]               ││·││
││  ○ Button B1.7    ○ LED L1.7     ○ Button B1.8    ○ LED L1.8       ││││contour           ││                     ││·││
││   ◉ Pot P1.1      ◉ Pot P1.2                                       ││││copy (2)          ││# HW -> VAR derivatio││·││
││       0%              0%                                           ││││copy (3)          ││[button]             ││·││
│└────────────────────────────────────────────────────────────────────┘│││contour (1)       ││    button = B1.1    ││·││
│┌ CV I/O ────────────────────────────────────────────────────────────┐│││switch            ││    output = _TRIG   ││·││
││   ← Output O1     ← Output O2     ← Output O4                      ││││quantizer         ││                     ││·││
││     CV OUT          CV OUT          CV OUT                         ││││mixer             ││[copy]               ││·││
││                                                                    ││││contour (2)       ││    input = B1.1     ││·││
│└────────────────────────────────────────────────────────────────────┘││└──────────────────┘└─────────────────────┘└─┘│
└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘
┌ Graph FULL ──────────────────────────────────────────────┐┌ Graph FILTERED ──────────────────────────────────────────┐
│╭copy────────────────╮─╮─────────────────────────────────┐││                   No influence selected                  │
││ │╭copy────────────────╮                                │││                                                          │
││ ││                 │ ││         ╭b╭led─────────────────╮││                                                          │
││╭c│ntour─────────────╮╮│         │ │                  │ │││                                                          │
│╰│││─────────────────╯│││         │╭◉witch──────────────╮│││                                                          │
││││╰────────────────────╯╮        ╭││quantizer───────────│││                                                          │
│╭copy────────────────╮╮│ │       ╭c╭╰────────────────────╯││                                                          │
│││─╭switch──────────────╮│       │╭╭logic───────────────╮│││                                                          │
│││ │╭contour─────────││─│╮       ││││───────────────────││││                                                          │
│││c││y───────────────││─││       │◉◉╰───────────────────●╯││                                                          │
│╰──│─────────────────╯╯╮││       ╰││────────────────────││││                                                          │
││││╰────────────────────╯│        ╰╰────────────────────╯│││                                                          │
││││ ╰──────────────────│─╯                               │││                                                          │
││╰│───────────────────╯│                                 │││                                                          │
│└─╰────────────────────╯─────────────────────────────────┘││                                                          │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Quad [Tab] focus: Panels | Modifier: no modifier | Esc close | Tab cycle                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
