src/snapshots/droid_tui__regression__visual_render_outlier_hint_snapshot@render_outlier_classic_100.snap
---
source: src/regression.rs
expression: buffer_to_ansi(&buf)
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                   DROID: render_outlier_matrix                                   │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──┐┌──┐─┌────┐
◉ ◉…  E… │ CV …
0%0%│  │ │    │
│  ││  │ │    │
│  ││  │ │    │
│  ││  │ │    │
│  ││  │ │    │
│  ││  │ │    │
│  ││  │ │    │
│  ││  │ │    │
│  ││  │ │    │
│○○││  │ │    │
│……││  │ │    │
│  │◉  │ │    │
│  │…  │ │    │
│○○││  │ ◀ ▶  │
│○○││  │ … …  │
│  ││  │ │    │
│  ││  │ │    │
│  ││  │ │    │
│○○││  │ │    │
│……││  │ │    │
│  ││  │ │    │
└──┘└──┘─└────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded render_outlier_matrix | Renders degraded at 100 cols — use ≥ 358 cols or reduce scale | Sca│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
