src/snapshots/droid_tui__regression__visual_render_outlier_hint_snapshot@render_outlier_mono_native.snap
---
source: src/regression.rs
expression: buffer_to_ansi(&buf)
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                                                                                    DROID: render_outlier_matrix                                                                                                                                                                    │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──┐┌──┐─┌────┐
◉ ◉…  E… │ CV …
0%0%│  │ │    │
│  ││  │ │    │
│  ││  │ │    │
│  ││  │ │    │
│  ││  │ │    │
│  ││  │ │    │
│  ││  │ │    │
│  ││  │ │    │
│  ││  │ │    │
│○○││  │ │    │
│……││  │ │    │
│  │◉  │ │    │
│  │…  │ │    │
│○○││  │ ◀ ▶  │
│○○││  │ … …  │
│  ││  │ │    │
│  ││  │ │    │
│  ││  │ │    │
│○○││  │ │    │
│……││  │ │    │
│  ││  │ │    │
└──┘└──┘─└────┘
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Renders degraded at 358 cols — use ≥ 358 cols or reduce scale | Scale: 1.0 | Orientation: Portrait                                                                                                                                                                                                                            │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
