src/snapshots/droid_tui__regression__visual_select_state_menu_snapshot@select_state_menu_classic_80.snap
---
source: src/regression.rs
expression: buffer_to_ansi(&buf)
---
┌──────────────────────────────────────────────────────────────────────────────┐
│                              DROID: select_state                             │
└─╭ Select state (2) ────────────────────────────────────────────────────────╮─┘
┌─│S1.1 [register] x1  candidates: 0, 1  current: 0                          │
◉ │_CABLE [cable] x1  candidates: 0, 1  current: 0                           │
0%│                                                                          │
│ │                                                                          │
│ │                                                                          │
│ │                                                                          │
│ │                                                                          │
│ │                                                                          │
│ │                                                                          │
│ │                                                                          │
│ │                                                                          │
│○│                                                                          │
│…│                                                                          │
│ │                                                                          │
│ │                                                                          │
│○│                                                                          │
│○│                                                                          │
│ │                                                                          │
│ │                                                                          │
│ │                                                                          │
│○│                                                                          │
│…│                                                                          │
│ │                                                                          │
└─│                                                                          │
┌─╰ j/k:navigate [/]:cycle Esc:clear ────────────────────────────────────────╯─┐
│Select state: 4 selected / 0 unselected / 0 unknown | Renders degraded at 80 c│
└──────────────────────────────────────────────────────────────────────────────┘
