src/snapshots/droid_tui__regression__visual_select_state_menu_snapshot@select_state_menu_mono_120.snap
---
source: src/regression.rs
expression: buffer_to_ansi(&buf)
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                  DROID: select_state                                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──┐
◉ ◉…                    ╭ Select state (2) ────────────────────────────────────────────────────╮
0%0%                    │S1.1 [register] x1  candidates: 0, 1  current: 0                      │
│  │                    │_CABLE [cable] x1  candidates: 0, 1  current: 0                       │
│  │                    │                                                                      │
│  │                    │                                                                      │
│  │                    │                                                                      │
│  │                    │                                                                      │
│  │                    │                                                                      │
│  │                    │                                                                      │
│  │                    │                                                                      │
│○○│                    │                                                                      │
│……│                    │                                                                      │
│  │                    │                                                                      │
│  │                    │                                                                      │
│○○│                    │                                                                      │
│○○│                    │                                                                      │
│  │                    │                                                                      │
│  │                    │                                                                      │
│  │                    │                                                                      │
│○○│                    │                                                                      │
│……│                    ╰ j/k:navigate [/]:cycle Esc:clear ────────────────────────────────────╯
│  │
└──┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Select state: 4 selected / 0 unselected / 0 unknown | Renders degraded at 120 cols — use ≥ 306 cols or reduce scale | │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
