src/snapshots/droid_tui__regression__visual_switch_value_rendering_snapshot@switch_value_classic_120.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                  DROID: switch_value                                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Pot ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  ◉ Switch S1.1   ▣ Switch S1.2   ○ Button B1.1    ◉ Pot P1.1                                                         │
│       35%             ON              OFF             0%                                                             │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘



















┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Scale: 1.0 | Orientation: Portrait                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
