src/snapshots/droid_tui__regression__visual_switch_value_rendering_snapshot@switch_value_classic_80.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────┐
│                              DROID: switch_value                             │
└──────────────────────────────────────────────────────────────────────────────┘
┌────┐
│ Fad…
▯    │
▯    │
▯    │
▮    │
▮    │
▮    │
▮    │
│    │
│    │
◉▣   │
……   │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
│    │
└────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Scale: 1.0 | Orientation: Portrait      │
└──────────────────────────────────────────────────────────────────────────────┘
